[package]
name = "pallet-did"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'system/std',
    'timestamp/std',
]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '349b54c0c821ec6d90675c233be391127dff5dcb'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6cf45f26e4b3fdcf04eca2c6736cf194fff85dfc'
version = '2.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '6cf45f26e4b3fdcf04eca2c6736cf194fff85dfc'
version = '2.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6cf45f26e4b3fdcf04eca2c6736cf194fff85dfc'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6cf45f26e4b3fdcf04eca2c6736cf194fff85dfc'
version = '2.0.0'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '6cf45f26e4b3fdcf04eca2c6736cf194fff85dfc'
version = '2.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6cf45f26e4b3fdcf04eca2c6736cf194fff85dfc'
version = '2.0.0'